[package]
name = "chainsmoker"
version = "0.1.0"
edition = "2024"

[dependencies]
solana-gossip = { version = "3.0.3", features = ["agave-unstable-api"]}
solana-net-utils = { version = "3.0.0", features = ["agave-unstable-api"] }
solana-sdk = "3.0.0"
solana-streamer = "3.0.3"
solana-ledger = { version = "3.0.0", features = ["agave-unstable-api"] }
solana-core = "3.0.3"
solana-perf = "3.0.3"
crossbeam-channel = "0.5.15"
solana-runtime = "3.0.3"
solana-tpu-client = "3.0.3"
